# dns-collector

./: .pre-commit-config.yaml  README.md  config.toml  pyproject.toml
dns_collector/: db.py  resolver.py
